vpc/vpc-private-subnet.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "3 private subnets and 3 NATs across 3 availability zones in a VPC",
  "Parameters": {
    "VpcId": {
      "Description": "The VPC ID we are deploying assets into.",
      "Type": "AWS::EC2::VPC::Id"
    },
    "ServiceName": {
      "Description": "Name of this deployment",
      "AllowedPattern": "^[a-z0-9][a-z0-9-.]*$",
      "Type": "String"
    },
    "TechnicalOwner": {
      "Description": "A valid LDAP email",
      "AllowedPattern": "^([a-zA-Z0-9_\\-\\.]+)@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\\]?)$",
      "Type": "String"
    },
    "Environment": {
      "Description": "The name of the environment we are deploying into: sandbox, stage, or production.",
      "Type": "String",
      "AllowedValues": [
        "sandbox",
        "stage",
        "prod",
        "admin"
      ],
      "Default": "sandbox",
      "ConstraintDescription": "Must be one of these types of VPCs"
    },
    "PrivateSubnetAZ1Cidr": {
      "Description": "The CIDR for the Private Subnet in Availability Zone 1.",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "19",
      "AllowedPattern": "^([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5])).([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5])).([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5])).([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5]))/([0-9]|[12][0-9]|3[0-2])",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x"
    },
    "PrivateSubnetAZ2Cidr": {
      "Description": "The CIDR for the Private Subnet in Availability Zone 2.",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "19",
      "AllowedPattern": "^([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5])).([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5])).([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5])).([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5]))/([0-9]|[12][0-9]|3[0-2])",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x"
    },
    "PrivateSubnetAZ3Cidr": {
      "Description": "The CIDR for the Private Subnet in Availability Zone 3.",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "19",
      "AllowedPattern": "^([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5])).([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5])).([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5])).([0-9]|[1-9][0-9]|1[0-9]{2}|2([0-4][0-9]|5[0-5]))/([0-9]|[12][0-9]|3[0-2])",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x"
    },
    "SSHKeyName": {
      "Description": "Name of an existing EC2 SSH KeyPair to install on the instance",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription": "Must be the name of an existing EC2 KeyPair."
    },
    "PublicSubnetAZ1": {
      "Description": "The ID of the Public Subnet in Availability Zone 1.",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PublicSubnetAZ2": {
      "Description": "The ID of the Public Subnet in Availability Zone 2.",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PublicSubnetAZ3": {
      "Description": "The ID of the Public Subnet in Availability Zone 3.",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "InternetAccessSecurityGroup": {
      "Description": "Security group FROM which we allow traffic TO the NAT instances.",
      "Type": "AWS::EC2::SecurityGroup::Id"
    },
    "SharedServicesSecurityGroup": {
      "Description": "Security group for all instances",
      "Type": "AWS::EC2::SecurityGroup::Id"
    },
    "StacksVersion": {
      "Description": "Version of the Nubis Stacks",
      "Type": "String",
      "Default": "v1.4.0-dev"
    }
  },
  "Resources": {
    "PrivateSubnetAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Metadata": {
        "update_key": "0002"
      },
      "Properties": {
        "VpcId": {
          "Ref": "VpcId"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "CidrBlock": {
          "Ref": "PrivateSubnetAZ1Cidr"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateSubnetAZ1"
          },
          {
            "Key": "ServiceName",
            "Value": {
              "Ref": "ServiceName"
            }
          },
          {
            "Key": "TechnicalOwner",
            "Value": {
              "Ref": "TechnicalOwner"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    },
    "PrivateSubnetAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VpcId"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "CidrBlock": {
          "Ref": "PrivateSubnetAZ2Cidr"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateSubnetAZ2"
          },
          {
            "Key": "ServiceName",
            "Value": {
              "Ref": "ServiceName"
            }
          },
          {
            "Key": "TechnicalOwner",
            "Value": {
              "Ref": "TechnicalOwner"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    },
    "PrivateSubnetAZ3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VpcId"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "2",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "CidrBlock": {
          "Ref": "PrivateSubnetAZ3Cidr"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateSubnetAZ3"
          },
          {
            "Key": "ServiceName",
            "Value": {
              "Ref": "ServiceName"
            }
          },
          {
            "Key": "TechnicalOwner",
            "Value": {
              "Ref": "TechnicalOwner"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    },
    "PrivateRouteTableAZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateSubnet1AZRouteTable"
          },
          {
            "Key": "ServiceName",
            "Value": {
              "Ref": "ServiceName"
            }
          },
          {
            "Key": "TechnicalOwner",
            "Value": {
              "Ref": "TechnicalOwner"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    },
    "PrivateRouteTableAZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateSubnet2AZRouteTable"
          },
          {
            "Key": "ServiceName",
            "Value": {
              "Ref": "ServiceName"
            }
          },
          {
            "Key": "TechnicalOwner",
            "Value": {
              "Ref": "TechnicalOwner"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    },
    "PrivateRouteTableAZ3": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateSubnet3AZRouteTable"
          },
          {
            "Key": "ServiceName",
            "Value": {
              "Ref": "ServiceName"
            }
          },
          {
            "Key": "TechnicalOwner",
            "Value": {
              "Ref": "TechnicalOwner"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    },
    "PrivateSubnetAZ1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnetAZ1"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTableAZ1"
        }
      }
    },
    "PrivateSubnetAZ2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnetAZ2"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTableAZ2"
        }
      }
    },
    "PrivateSubnetAZ3RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnetAZ3"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTableAZ3"
        }
      }
    },
    "NatEniAZ1": {
      "Type": "AWS::EC2::NetworkInterface",
      "DependsOn": [
        "PrivateSubnetAZ1"
      ],
      "Properties": {
        "Description": "Nat ENI for AZ1",
        "SourceDestCheck": "false",
        "GroupSet": [
          {
            "Ref": "NatSecurityGroup"
          },
          {
            "Ref": "SharedServicesSecurityGroup"
          }
        ],
        "SubnetId": {
          "Ref": "PublicSubnetAZ1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ServiceName"
                  },
                  " (",
                  {
                    "Ref": "Environment"
                  },
                  ")"
                ]
              ]
            }
          },
          {
            "Key": "StackName",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Purpose",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "nubis-nat-eni",
                  {
                    "Ref": "Environment"
                  }
                ]
              ]
            }
          }
        ]
      }
    },
    "NatEniAZ2": {
      "Type": "AWS::EC2::NetworkInterface",
      "DependsOn": [
        "PrivateSubnetAZ2",
        "NatEniAZ1"
      ],
      "Properties": {
        "Description": "Nat ENI for AZ2",
        "SourceDestCheck": "false",
        "GroupSet": [
          {
            "Ref": "NatSecurityGroup"
          },
          {
            "Ref": "SharedServicesSecurityGroup"
          }
        ],
        "SubnetId": {
          "Ref": "PublicSubnetAZ2"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ServiceName"
                  },
                  " (",
                  {
                    "Ref": "Environment"
                  },
                  ")"
                ]
              ]
            }
          },
          {
            "Key": "StackName",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Purpose",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "nubis-nat-eni",
                  {
                    "Ref": "Environment"
                  }
                ]
              ]
            }
          }
        ]
      }
    },
    "NatEniAZ3": {
      "Type": "AWS::EC2::NetworkInterface",
      "DependsOn": [
        "PrivateSubnetAZ3",
        "NatEniAZ2"
      ],
      "Properties": {
        "Description": "Nat ENI for AZ3",
        "SourceDestCheck": "false",
        "GroupSet": [
          {
            "Ref": "NatSecurityGroup"
          },
          {
            "Ref": "SharedServicesSecurityGroup"
          }
        ],
        "SubnetId": {
          "Ref": "PublicSubnetAZ3"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ServiceName"
                  },
                  " (",
                  {
                    "Ref": "Environment"
                  },
                  ")"
                ]
              ]
            }
          },
          {
            "Key": "StackName",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Purpose",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "nubis-nat-eni",
                  {
                    "Ref": "Environment"
                  }
                ]
              ]
            }
          }
        ]
      }
    },
    "PrivateRouteAZ1": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NatEniAZ1",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTableAZ1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NetworkInterfaceId": {
          "Ref": "NatEniAZ1"
        }
      }
    },
    "PrivateRouteAZ2": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NatEniAZ2",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTableAZ2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NetworkInterfaceId": {
          "Ref": "NatEniAZ2"
        }
      }
    },
    "PrivateRouteAZ3": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NatEniAZ3",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTableAZ3"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NetworkInterfaceId": {
          "Ref": "NatEniAZ3"
        }
      }
    },
    "NatSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NAT Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "0",
            "ToPort": "65535",
            "SourceSecurityGroupId": {
              "Ref": "InternetAccessSecurityGroup"
            }
          },
          {
            "IpProtocol": "udp",
            "FromPort": "0",
            "ToPort": "65535",
            "SourceSecurityGroupId": {
              "Ref": "InternetAccessSecurityGroup"
            }
          },
          {
            "IpProtocol": "icmp",
            "FromPort": "8",
            "ToPort": "-1",
            "SourceSecurityGroupId": {
              "Ref": "InternetAccessSecurityGroup"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "NATSecurityGroup"
          },
          {
            "Key": "ServiceName",
            "Value": {
              "Ref": "ServiceName"
            }
          },
          {
            "Key": "TechnicalOwner",
            "Value": "Netops"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          }
        ]
      }
    }
  },
  "Outputs": {
    "PrivateRouteTableAZ1": {
      "Value": {
        "Ref": "PrivateRouteTableAZ1"
      }
    },
    "PrivateRouteTableAZ2": {
      "Value": {
        "Ref": "PrivateRouteTableAZ2"
      }
    },
    "PrivateRouteTableAZ3": {
      "Value": {
        "Ref": "PrivateRouteTableAZ3"
      }
    },
    "PrivateSubnetAZ1": {
      "Value": {
        "Ref": "PrivateSubnetAZ1"
      }
    },
    "PrivateSubnetAZ2": {
      "Value": {
        "Ref": "PrivateSubnetAZ2"
      }
    },
    "PrivateSubnetAZ3": {
      "Value": {
        "Ref": "PrivateSubnetAZ3"
      }
    },
    "PrivateAvailabilityZone1": {
      "Value": {
        "Fn::GetAtt": [
          "PrivateSubnetAZ1",
          "AvailabilityZone"
        ]
      }
    },
    "PrivateAvailabilityZone2": {
      "Value": {
        "Fn::GetAtt": [
          "PrivateSubnetAZ2",
          "AvailabilityZone"
        ]
      }
    },
    "PrivateAvailabilityZone3": {
      "Value": {
        "Fn::GetAtt": [
          "PrivateSubnetAZ3",
          "AvailabilityZone"
        ]
      }
    },
    "NatSecurityGroup": {
      "Value": {
        "Ref": "NatSecurityGroup"
      }
    },
    "NatEniAZ1": {
      "Description": "NAT ENI for AZ1",
      "Value": {
        "Ref": "NatEniAZ1"
      }
    },
    "NatEniAZ2": {
      "Description": "NAT ENI for AZ2",
      "Value": {
        "Ref": "NatEniAZ2"
      }
    },
    "NatEniAZ3": {
      "Description": "NAT ENI for AZ3",
      "Value": {
        "Ref": "NatEniAZ3"
      }
    }
  }
}
